[gd_scene load_steps=18 format=2]

[ext_resource path="res://objects/AsteroidSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://assets/images/backgrounds/darkPurple.png" type="Texture" id=4]
[ext_resource path="res://entities/MainCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/Score.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/UbuntuMono-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/audio/music/sawsquarenoise_-_03_-_Towel_Defence_Ingame.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/fonts/UbuntuMono-BoldItalic.ttf" type="DynamicFontData" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(0.0, -1.0);
uniform float speed_scale = 0.5;

void fragment(){
	vec2 move = direction * TIME * speed_scale;
	
	COLOR = texture(TEXTURE, UV + move);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/direction = Vector2( 0, -1 )
shader_param/speed_scale = 0.5

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 42
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 42
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -10, -10 )
region_enabled = true
region_rect = Rect2( 0, 0, 1300, 740 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 650, 683 )

[node name="AsteroidSpawner" parent="." instance=ExtResource( 1 )]

[node name="MainCamera" parent="." instance=ExtResource( 5 )]
anchor_mode = 0
current = true

[node name="GUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
margin_left = -20.0
margin_top = -10.0
margin_right = 1260.0
margin_bottom = 50.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="GUI/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 1260.0
margin_bottom = 80.0

[node name="VBox" type="VBoxContainer" parent="GUI/MarginContainer/HBox"]
margin_right = 1240.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="Score" type="Label" parent="GUI/MarginContainer/HBox/VBox"]
margin_right = 1240.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Score: 0"
align = 2
script = ExtResource( 6 )

[node name="Difficulty" type="Label" parent="GUI/MarginContainer/HBox/VBox"]
margin_top = 37.0
margin_right = 1240.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 6 )
text = "Difficulty: 1"
align = 2
valign = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0
autoplay = true

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 182.0
margin_top = 9.0
margin_right = 1082.0
margin_bottom = 209.0
custom_colors/font_color = Color( 0.603922, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Game Over"
align = 1
valign = 1

[node name="RestartLabel" type="Label" parent="GameOverLabel"]
margin_left = 198.0
margin_top = 186.0
margin_right = 702.0
margin_bottom = 229.0
custom_colors/font_color = Color( 0.984314, 0.529412, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Press \"Enter\" to Restart"

[node name="FinalScoreLabel" type="Label" parent="GameOverLabel"]
margin_left = 7.0
margin_top = 242.0
margin_right = 907.0
margin_bottom = 285.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Your Score: 0"
align = 1

[node name="HighScoresTitle" type="Label" parent="GameOverLabel"]
margin_left = 14.0
margin_top = 386.0
margin_right = 914.0
margin_bottom = 429.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "--HIGH SCORES--"
align = 1

[node name="HighScoresLabel" type="Label" parent="GameOverLabel"]
margin_left = -130.0
margin_top = 444.0
margin_right = 664.0
margin_bottom = 694.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "1) PWNINGSTAR   10,000
2) CHIWILLROCKU  9,750
3) TENCOUNTEX    8,200
4) google can they not feed me 0
5) goggle can u eat asteroids  0"
align = 2

[node name="NameEdit" type="LineEdit" parent="GameOverLabel"]
visible = false
margin_left = 216.0
margin_top = 305.0
margin_right = 716.0
margin_bottom = 358.0
custom_fonts/font = SubResource( 8 )
max_length = 25
placeholder_text = "Enter Your Name"

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
